@startuml
title test
CalcCartridge -- ColorData
CalcCartridge -- Fileread
Fileread -- PenData

class CalcCartridge{
    filedatalist
    colorlists
    penlists
    sum
    show()
}

class PenData{
    penname
    limit
    setPenCode()
    getLimit()
    getPenName()
}

class ColorData{
    colorcode
    colorname
    setColorCode()
    getColorName()
}

class Fileread{
    filename
    datalists
    getFileData()
}

@enduml

@startuml sequence

Main -> FileRead:DoWork
activate FileRead
FileRead -> PenData:DoWork
activate PenData
return Done
return filedatalist
Main -> CalcCartridge:DoWork
activate CalcCartridge
CalcCartridge -> CalcCartridge:calc
Main -> CalcCartridge:ToShowResult
CalcCartridge ->ColorData:DoWork
activate ColorData
return colorname
CalcCartridge -> CalcCartridge:show
return done

@enduml

